--- a/login.html
+++ b/login.html
@@ -13,18 +13,18 @@
 	<div class="transcontainer"></div>
 	<div class="container">
 		<div class="form">
-			<form>
+			<form action="homepage.html">
 				<h2>Sign In</h2>
 				<label>
 					<span>Email Address</span>
-					<input type="email" name="email">
+					<input type="email" name="email" id="email">
 				</label>
 				<label>
 					<span>Password</span>
-					<input type="password" name="password">
+					<input type="password" name="password" id="password">
 				</label>
-				<button class="submitlogin login">Sign In</button>
-				<button type="button" class="resetpass" onclick="error_message()">Reset Password</button>
+				<button type= "submit" class="submitlogin login" onclick="return check_valid_login();" value="register">Sign In</button>
+				<button type="button" class="resetpass" value="login" onclick="error_message()">Reset Password</button>
 				<button type="button" class="registerbutton" onclick="location.href='register.html';">Not registered?</button>
 			</form>
 		</div>
